views: dismiss page info bubble on page navigations & tab switches

On Mac, this bubble does not consume keyboard events, so global browser hotkeys still work. In those cases, the dialog will not lose focus while navigating or switching tabs, so the page info bubble needs to listen for those changes and dismiss itself.

BUG=715845,696136

Change-Id: I1fdd6f5440218cb0d55c2236fa3f9b99212fd087
Reviewed-on: https://chromium-review.googlesource.com/514163
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Reviewed-by: Ben Wells <benwells@chromium.org>
Cr-Commit-Position: refs/heads/master@{#475019}
Former-commit-id: f582e25a561c090b75b0dc1c96f9d8136ad6991b